syntax = "proto3";

package tokenRpcServerProtoFiles;

option go_package = "./tokenRpcServerProtoFiles";

message GenerateTokenRequest{
    string emailId=1;
}

message TokenRequest {
  string token = 1;
}

message SuccessResponse {
  int32 status_code = 1;
  string message = 2;
  string data = 3;
}

message ErrorResponse {
  int32 status_code = 1;
  string error_message = 2;
}

message TokenResponse {
  oneof response {
    SuccessResponse success = 1;
    ErrorResponse error = 2;
  }
}

service TokenValidation {
  rpc GenerateToken(GenerateTokenRequest) returns (TokenResponse);
  rpc ValidateToken(TokenRequest) returns (TokenResponse);
}

//cmd  protoc --go_out=./ --go-grpc_out=./ ./tokenServer.proto

